--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
   <name>Serialization Experiments</name>
   <description>Experiements with Java Serialization</description>
   
+   <prerequisites>
+     <maven>3.0</maven>
+   </prerequisites>
+  
   <developers>
     <developer>
       <id>marschall</id>
@@ -107,15 +111,15 @@
         </plugin>
         <plugin>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>2.2</version>
+          <version>2.3</version>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>2.4</version>
+          <version>2.5</version>
         </plugin>
         <plugin>
           <artifactId>maven-source-plugin</artifactId>
-          <version>2.2.1</version>
+          <version>2.3</version>
         </plugin>
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
@@ -127,15 +131,15 @@
         </plugin>
         <plugin>
           <artifactId>maven-gpg-plugin</artifactId>
-          <version>1.4</version>
+          <version>1.5</version>
         </plugin>
         <plugin>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.4.2</version>
+          <version>2.5</version>
         </plugin>
         <plugin>
           <artifactId>maven-scm-plugin</artifactId>
-          <version>1.8.1</version>
+          <version>1.9.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -162,7 +166,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.2.4</version>
+      <version>2.3</version>
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
